<resources>
    <string name="app_name">FeedMe</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="email_required">email required</string>
    <string name="short_password">Password should be atleast 6 characters long</string>
    <string name="short_tearOfBirth">Year should be 4 digits</string>
    <string name="register_success">Registration success!</string>
    <string name="email_exist">Email already exist!"</string>
    <string name="login_successfully">Login successfully</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password address!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="reset_password_msg1">We have sent you instructions to reset your password!</string>
    <string name="reset_password_msg2">Failed to send reset email!</string>
    <string name="register_mail">Enter your registered email</string>
    <string name="EntrySurveyTestTitle">Entry Survey</string>
    <string name="Allergies">Allergies</string>
    <string name="KosherLabel">Kosher</string>
    <string name="NotKosherLabel">Not Kosher</string>
    <string name="RegularLabel">Regular</string>
    <string name="VegetarianLabel">Vegetarian</string>
    <string name="VeganLabel">Vegan</string>
    <string name="email">Email</string>
    <string name="yearOfBirth">Year of birth:</string>
    <string name="nextBtnText">Next Stage</string>
    <string name="likeLabel">Like</string>
    <string name="passLabel">Pass</string>
    <string name="regCompletedLabel">Registration Completed!</string>
    <string name="continueLabel">Continue</string>
    <string name="DislikesLabel">Dislikes</string>
    <string name="chooseLabel">Choose</string>
    <string name="requiredError">Field is required</string>
    <string name="onlyLettersError">Use letters only</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="classification">User Classification</string>


</resources>