<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="Register.EntrySurveyText">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/EntrySurveyTestTitle"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/AllergiesLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/IngredientSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/Allergies"/>

            <Button
                android:id="@+id/addAllergyBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:text="+"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="50px"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/DislikesLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <AutoCompleteTextView
                android:id="@+id/DislikesSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/DislikesLabel"/>

            <Button
                android:id="@+id/addDisklikeBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:text="+"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="50px"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/KosherRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <RadioButton android:id="@+id/radio_kosher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/KosherLabel"
                android:checked="true"/>
            <RadioButton android:id="@+id/radio_notKosher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotKosherLabel"
                android:textSize="12dp"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/VeganRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <RadioButton android:id="@+id/radio_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/RegularLabel"
                android:checked="true"/>
            <RadioButton android:id="@+id/radio_vegetarian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/VegetarianLabel"
                android:layout_marginLeft="17dp"/>
            <RadioButton android:id="@+id/radio_vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/VeganLabel"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>
        <CheckBox
            android:id="@+id/premiumCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Premium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nextBtn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/nextBtnText"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>





</LinearLayout>


